# golden-fork-pipeline

./: .gitignore  LICENSE  Makefile  README.md  generate_orders.py  orders.csv  pyproject.toml
.github/workflows/: test.yml
lambda/alerter/: handler.py
lambda/loader/: handler.py
lambda/shared/: dynamodb.py  metrics.py  validators.py
lambda/validator/: handler.py
terraform/: athena.tf  main.tf  observability.tf  outputs.tf  sqs.tf  terraform.tfvars.example  variables.tf
tests/: test_alerter_handler.py  test_loader_handler.py  test_validator_handler.py
